--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <meta name="description" content="Ankita Sharma Resume/CV／Portfolio">
     <meta name="author" content="Ankita Sharma">    
     <link rel="shortcut icon" href="#">  
-    <link href="D:/Ankita_Portfolio/CSS/css" rel="stylesheet" type="text/css">
+    <link href="CSS/css" rel="stylesheet" type="text/css">
     <!-- Global CSS -->
-    <link rel="stylesheet" href="D:/Ankita_Portfolio/CSS/bootstrap.min.css">  
+    <link rel="stylesheet" href="CSS/bootstrap.min.css">  
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	
     <!-- Plugins CSS -->
