--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
     <meta name="description" content="Ankita Sharma Resume/CV／Portfolio">
     <meta name="author" content="Ankita Sharma">    
     <link rel="shortcut icon" href="#">  
-    <link href="CSS/css" rel="stylesheet" type="text/css">
+    <link href="../CSS/css" rel="stylesheet" type="text/css">
     <!-- Global CSS -->
-    <link rel="stylesheet" href="CSS/bootstrap.min.css">  
+    <link rel="stylesheet" href="../CSS/bootstrap.min.css">  
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	
     <!-- Plugins CSS -->
-    <link rel="stylesheet" href="D:/Ankita_Portfolio/CSS/font-awesome.css">
+    <link rel="stylesheet" href="../CSS/font-awesome.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     
     <!-- Theme CSS -->  
-    <link id="theme-style" rel="stylesheet" href="D:/Ankita_Portfolio/CSS/main.css">
+    <link id="theme-style" rel="stylesheet" href="../CSS/main.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -45,7 +45,7 @@
         
         <div class="intro">
             <div class="container text-center">
-                <img class="profile-image img-circle" src="D:/Ankita_Portfolio/images/profile.jpg" alt="Ankita Sharma">
+                <img class="profile-image img-circle" src="../images/profile.jpg" alt="Ankita Sharma">
                 <h1 class="name">Ankita Sharma</h1>
                 <div class="title">Developer. Data Scientist. Programmer. Dreamer. Machine Learning. Innovator. Creative</div>
                 <!--<div class="profile">
