--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Ankita Sharma／Portfolio</title>
+    <title>Ankita Sharma</title>
     <!-- Meta -->
     
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
