--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <header class="header">
         <div class="top-bar container-fluid">
             <div class="actions">
-                <a class="btn hidden-xs" href="mailto:asharm50@uncc.edu.com"><i class="fa fa-paper-plane" aria-hidden="true"></i> Hire Me</a>
-                <a class="btn" href="#"><i class="fa fa-download" aria-hidden="true"></i> Download My Resume</a>
+                <a class="btn hidden-xs" href="mailto:er.ankitasharma15@gmail.com"><i class="fa fa-paper-plane" aria-hidden="true"></i> Hire Me</a>
+                <a class="btn" href="Ankita.Developer.pdf"><i class="fa fa-download" aria-hidden="true"></i> Download My Resume</a>
             </div><!--//actions-->
             <ul class="social list-inline">
                 <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
@@ -86,7 +86,7 @@
 		
 			</div>
 			<div class="col-sm-4">
-			  <img class="img-circle" width="400px" height="400px" src="images/aboutme.jpg">
+			  <img class="img-circle" width="300px" height="300px" src="images/aboutme.jpg">
 			</div>
 		  </div>
 		</div>
