--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="top-bar container-fluid">
             <div class="actions">
                 <a class="btn hidden-xs" href="mailto:er.ankitasharma15@gmail.com"><i class="fa fa-paper-plane" aria-hidden="true"></i> Hire Me</a>
-                <a class="btn" href="Ankita.Developer.pdf"><i class="fa fa-download" aria-hidden="true"></i> Download My Resume</a>
+                <a class="btn" href="ANKITA.Developer.pdf" target="_blank"><i class="fa fa-download" aria-hidden="true"></i> Download My Resume</a>
             </div><!--//actions-->
             <ul class="social list-inline">
                 <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
