--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                 <a class="btn" href="ANKITA.Developer.pdf" target="_blank"><i class="fa fa-download" aria-hidden="true"></i> Download My Resume</a>
             </div><!--//actions-->
             <ul class="social list-inline">
-                <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                <li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
-                <li><a href="#"><i class="fa fa-github-alt" aria-hidden="true"></i></a></li>
-				<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/ankitasharma15/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                <li><a href="https://plus.google.com/u/1/+AnkitaSharma15"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+                <li><a href="https://github.com/AnkitaSharma15/"><i class="fa fa-github-alt" aria-hidden="true"></i></a></li>
+				<li><a href="https://www.facebook.com/ERANKITA1509"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
             </ul><!--//social-->
         </div><!--//top-bar-->
         
