--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="top-bar container-fluid">
             <div class="actions">
                 <a class="btn hidden-xs" href="mailto:er.ankitasharma15@gmail.com"><i class="fa fa-paper-plane" aria-hidden="true"></i> Hire Me</a>
-                <a class="btn" href="ANKITA.Developer.pdf" target="_blank"><i class="fa fa-download" aria-hidden="true"></i> Download My Resume</a>
+                <a class="btn" href="Ankita.Sharma.pdf" target="_blank"><i class="fa fa-download" aria-hidden="true"></i> Download My Resume</a>
             </div><!--//actions-->
             <ul class="social list-inline">
                 <li><a href="https://www.linkedin.com/in/ankitasharma15/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
@@ -572,8 +572,10 @@ $(document).ready(function(){
     if (this.hash !== "") {
       // Prevent default anchor click behavior
       event.preventDefault();
+
       // Store hash
       var hash = this.hash;
+
       // Using jQuery's animate() method to add smooth page scroll
       // The optional number (900) specifies the number of milliseconds it takes to scroll to the specified area
       $('html, body').animate({
@@ -589,6 +591,7 @@ $(document).ready(function(){
   $(window).scroll(function() {
     $(".slideanim").each(function(){
       var pos = $(this).offset().top;
+
       var winTop = $(window).scrollTop();
         if (pos < winTop + 600) {
           $(this).addClass("slide");
