--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 		</div>
 		</div>
         <div id="experiences-section" class="container-fluid bg-navy">
-            <h2 class="section-title">Experience</h2>
+            <h2 class="section-title" style="color: white">Experience</h2>
 			<div class="timeline">
 
             <div class="work left">
