--- a/index.html
+++ b/index.html
@@ -346,19 +346,19 @@
             <h2 class="section-title" style="color:white">Education</h2>
             <div class="row">
                 <div class="item col-xs-12 col-sm-12">
-                    <center><div class="item-inner">
+<!--                     <center><div class="item-inner">
                         <h3 class="degree" style="color:white" >MS Information Technology</h3>
                         <div class="education-body" style="color:white">
                             The University of North Carolina at Charlotte, Charlotte, NC
                         </div><!--//education-body-->
-                        <div class="time" style="color:white">May 2018</div>
+<!--                         <div class="time" style="color:white">May 2018</div>
                         <div class="desc" style="color:white">
                             <b>Concentration:</b> Advanced Data and Knowledge Discovery<br>
 							<b>GPA:</b> 4.0<br>
 							<b>Relevant Coursework:</b> Software System Design & Implementation, Mobile Application Development, Machine Learning, Modern Data Science, Human Computer Interaction, Knowledge Discovery in Databases, Cloud Data Storage
 
 							
-							</div>
+							<!-- </div> --> 
                     </div></center><!--//item-inner-->
                 </div><!--//item-->
                 
