--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <div class="work left">
                 <div class="content">
                 <h2>Application Developer</h2>
-                <h4><i class="fa fa-briefcase" style="font-size:20px"></i>&nbsp;&nbsp;Technology Solutions Office, CCI, UNC Charlotte</h4>
+                <h4><i class="fa fa-briefcase" style="font-size:20px"></i>&nbsp;&nbsp;Technology Solutions Office, UNC Charlotte</h4>
               <h4><i class="fa fa-calendar" style="font-size:20px"></i>&nbsp;&nbsp;Oct 2017 - Present</h4>
                   
                   <ul>
